# blot_v1

./: README.md  claude.md  index.html
Skill-MCP-Claude-main/: .coverage  .gitignore  README.md  build.bat  build_exe.py  creation_station_db.py  migrate.py  requirements.txt  server.py  skills-manager.html  skills_manager_api.py  skills_manager_app.py  skills_manager_launcher.py  vercel.json
Skill-MCP-Claude-main/api/: index.py  requirements.txt
Skill-MCP-Claude-main/core/: __init__.py  browse.py  claude_cli.py  config.py  skills.py  utils.py
Skill-MCP-Claude-main/frontend/: index.html  package.json  vitest.config.js
Skill-MCP-Claude-main/rust/skills-mcp/: CRITIQUE_PROMPT.md  Cargo.toml
Skill-MCP-Claude-main/rust/skills-mcp/src/: lib.rs
Skill-MCP-Claude-main/rust/skills-mcp/src/api/: mod.rs  routes.rs  server.rs
Skill-MCP-Claude-main/rust/skills-mcp/src/index/: file_watcher.rs  indexer.rs  mod.rs
Skill-MCP-Claude-main/rust/skills-mcp/src/mcp/: mod.rs  server.rs  tools.rs
Skill-MCP-Claude-main/rust/skills-mcp/src/models/: content.rs  index.rs  meta.rs  mod.rs  search.rs  stats.rs
Skill-MCP-Claude-main/rust/skills-mcp/src/search/: mod.rs  service.rs  snippet.rs
Skill-MCP-Claude-main/rust/skills-mcp/src/validation/: meta.rs  mod.rs  skills.rs
Skill-MCP-Claude-main/skills-mcp-server/: package-lock.json  package.json  tsconfig.json
Skill-MCP-Claude-main/tests/: __init__.py  conftest.py  test_api.py  (+2 more)
docs/: app.js  index.html  particles.html  particles.js  shader-input-report.md  shader-input-spec.json  shader.frag  styles.css
src/: index.ts
(+158 files in other folders)
